// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminDashboardController GET /admin/dashboard (Teams Disabled) should display demo dashboard data 1`] = `
Object {
  "data": Object {
    "day": "2020-01-07T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 29000,
        "teams_count": 0,
        "users_count": 25,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 29000,
        "teams_count": 0,
        "users_count": 24,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 20,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 23000,
        "teams_count": 0,
        "users_count": 19,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 23000,
        "teams_count": 0,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-30",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 17,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 17000,
        "teams_count": 0,
        "users_count": 15,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 17000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 14000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 14000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 10,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 9,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
    ],
    "mrr_new": 150,
    "mrr_total": 290,
    "recent_users": Array [
      Object {
        "email": "barb.henderson@example.com",
        "joined": "2020-01-04T00:00:00+00:00",
        "mrr": 150,
        "name": "Barb Henderson",
        "plan": "Gold Monthly",
      },
      Object {
        "email": "emily.jorgensen@example.com",
        "joined": "2020-01-02T00:00:00+00:00",
        "mrr": 75,
        "name": "Emily Jorgensen",
        "plan": "Silver Monthly",
      },
      Object {
        "email": "aitor.santana@example.com",
        "joined": "2020-01-01T00:00:00+00:00",
        "mrr": 20.83,
        "name": "Aitor Santana",
        "plan": "Bronze Yearly",
      },
    ],
    "users_new": 12,
    "users_total": 25,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Disabled) should display demo dashboard data without mrr data when subscriptions are disabled 1`] = `
Object {
  "data": Object {
    "day": "2020-01-07T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 29000,
        "teams_count": 0,
        "users_count": 25,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 29000,
        "teams_count": 0,
        "users_count": 24,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 25000,
        "teams_count": 0,
        "users_count": 20,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 23000,
        "teams_count": 0,
        "users_count": 19,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 23000,
        "teams_count": 0,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-30",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 17,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 21000,
        "teams_count": 0,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 17000,
        "teams_count": 0,
        "users_count": 15,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 17000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 14000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 14000,
        "teams_count": 0,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 10,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 9,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
    ],
    "recent_users": Array [
      Object {
        "email": "barb.henderson@example.com",
        "joined": "2020-01-04T00:00:00+00:00",
        "name": "Barb Henderson",
      },
      Object {
        "email": "emily.jorgensen@example.com",
        "joined": "2020-01-02T00:00:00+00:00",
        "name": "Emily Jorgensen",
      },
      Object {
        "email": "aitor.santana@example.com",
        "joined": "2020-01-01T00:00:00+00:00",
        "name": "Aitor Santana",
      },
    ],
    "users_new": 12,
    "users_total": 25,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Disabled) should display live dashboard data 1`] = `
Object {
  "data": Object {
    "day": "2020-01-06T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 6000,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 6000,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 6000,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 6000,
        "teams_count": 0,
        "users_count": 3,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 6000,
        "teams_count": 0,
        "users_count": 3,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 1000,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 1000,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-06",
        "mrr_amount": 1000,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
    ],
    "mrr_new": "50.00",
    "mrr_total": "60.00",
    "recent_users": Array [
      Object {
        "email": "user5@email.com",
        "joined": "2020-01-06T00:00:00+00:00",
        "mrr": "41.67",
        "name": "name5",
        "plan": "Advanced Annual",
      },
      Object {
        "email": "user4@email.com",
        "joined": "2020-01-05T00:00:00+00:00",
        "mrr": "8.33",
        "name": "name4",
        "plan": "Simple Annual",
      },
      Object {
        "email": "user@email.com",
        "joined": "2020-01-02T00:00:00+00:00",
        "name": "name",
      },
    ],
    "users_new": 3,
    "users_total": 5,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Disabled) should not display mrr data when subscriptions are disabled 1`] = `
Object {
  "data": Object {
    "day": "2020-01-06T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 5,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 4,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 3,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 3,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-06",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 2,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
    ],
    "recent_users": Array [
      Object {
        "email": "user5@email.com",
        "joined": "2020-01-06T00:00:00+00:00",
        "name": "name5",
      },
      Object {
        "email": "user4@email.com",
        "joined": "2020-01-05T00:00:00+00:00",
        "name": "name4",
      },
      Object {
        "email": "user@email.com",
        "joined": "2020-01-02T00:00:00+00:00",
        "name": "name",
      },
    ],
    "users_new": 3,
    "users_total": 5,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Enabled) should display demo dashboard data 1`] = `
Object {
  "data": Object {
    "day": "2020-01-07T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 29000,
        "teams_count": 18,
        "users_count": 25,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 29000,
        "teams_count": 18,
        "users_count": 24,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 25000,
        "teams_count": 17,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 25000,
        "teams_count": 17,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 25000,
        "teams_count": 15,
        "users_count": 20,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 23000,
        "teams_count": 14,
        "users_count": 19,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 23000,
        "teams_count": 14,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-30",
        "mrr_amount": 21000,
        "teams_count": 14,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 21000,
        "teams_count": 13,
        "users_count": 17,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 21000,
        "teams_count": 12,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 21000,
        "teams_count": 12,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 17000,
        "teams_count": 11,
        "users_count": 15,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 17000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 14000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 14000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 10,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 9,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 10000,
        "teams_count": 6,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 10000,
        "teams_count": 6,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 9000,
        "teams_count": 5,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 7000,
        "teams_count": 5,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 7000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
    ],
    "mrr_new": 150,
    "mrr_total": 290,
    "recent_teams": Array [
      Object {
        "joined": "2020-01-04T00:00:00+00:00",
        "mrr": 150,
        "name": "Deangelo's Team",
        "plan": "Gold Monthly",
      },
      Object {
        "joined": "2020-01-02T00:00:00+00:00",
        "mrr": 75,
        "name": "Pavani's Team",
        "plan": "Silver Monthly",
      },
      Object {
        "joined": "2020-01-01T00:00:00+00:00",
        "mrr": 20.83,
        "name": "Dave's Team",
        "plan": "Bronze Yearly",
      },
    ],
    "teams_new": 12,
    "teams_total": 18,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Enabled) should display demo dashboard data without mrr data when subscriptions are disabled 1`] = `
Object {
  "data": Object {
    "day": "2020-01-07T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 29000,
        "teams_count": 18,
        "users_count": 25,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 29000,
        "teams_count": 18,
        "users_count": 24,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 25000,
        "teams_count": 17,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 25000,
        "teams_count": 17,
        "users_count": 22,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 25000,
        "teams_count": 15,
        "users_count": 20,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 23000,
        "teams_count": 14,
        "users_count": 19,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 23000,
        "teams_count": 14,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-30",
        "mrr_amount": 21000,
        "teams_count": 14,
        "users_count": 18,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 21000,
        "teams_count": 13,
        "users_count": 17,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 21000,
        "teams_count": 12,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 21000,
        "teams_count": 12,
        "users_count": 16,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 17000,
        "teams_count": 11,
        "users_count": 15,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 17000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 14000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 14000,
        "teams_count": 11,
        "users_count": 14,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 10,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 9,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 12000,
        "teams_count": 8,
        "users_count": 8,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 10000,
        "teams_count": 6,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 10000,
        "teams_count": 6,
        "users_count": 7,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 9000,
        "teams_count": 5,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 7000,
        "teams_count": 5,
        "users_count": 6,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 7000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 3000,
        "teams_count": 4,
        "users_count": 5,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 1000,
        "teams_count": 3,
        "users_count": 4,
      },
    ],
    "recent_teams": Array [
      Object {
        "joined": "2020-01-04T00:00:00+00:00",
        "name": "Deangelo's Team",
      },
      Object {
        "joined": "2020-01-02T00:00:00+00:00",
        "name": "Pavani's Team",
      },
      Object {
        "joined": "2020-01-01T00:00:00+00:00",
        "name": "Dave's Team",
      },
    ],
    "teams_new": 12,
    "teams_total": 18,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Enabled) should display live dashboard data 1`] = `
Object {
  "data": Object {
    "day": "2020-01-06T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 6000,
        "teams_count": 5,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 6000,
        "teams_count": 5,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 6000,
        "teams_count": 4,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 0,
        "teams_count": 3,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 0,
        "teams_count": 2,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-06",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
    ],
    "mrr_new": "60.00",
    "mrr_total": "60.00",
    "recent_teams": Array [
      Object {
        "joined": "2020-01-06T00:00:00+00:00",
        "mrr": "41.67",
        "name": "name5",
        "plan": "Advanced Annual",
      },
      Object {
        "joined": "2020-01-05T00:00:00+00:00",
        "mrr": "8.33",
        "name": "name4",
        "plan": "Simple Annual",
      },
      Object {
        "joined": "2020-01-04T00:00:00+00:00",
        "mrr": "10.00",
        "name": "name3",
        "plan": "Simple Monthly",
      },
    ],
    "teams_new": 4,
    "teams_total": 5,
  },
}
`;

exports[`AdminDashboardController GET /admin/dashboard (Teams Enabled) should not display mrr data when subscriptions are disabled 1`] = `
Object {
  "data": Object {
    "day": "2020-01-06T00:00:00Z",
    "days": Array [
      Object {
        "day": "2020-01-06",
        "mrr_amount": 0,
        "teams_count": 5,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-05",
        "mrr_amount": 0,
        "teams_count": 5,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-04",
        "mrr_amount": 0,
        "teams_count": 4,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-03",
        "mrr_amount": 0,
        "teams_count": 3,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-02",
        "mrr_amount": 0,
        "teams_count": 2,
        "users_count": 0,
      },
      Object {
        "day": "2020-01-01",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-31",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-06",
        "mrr_amount": 0,
        "teams_count": 1,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-29",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-28",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-27",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-26",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-25",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-24",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-23",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-22",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-21",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-20",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-19",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-18",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-17",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-16",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-15",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-14",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-13",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-12",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-11",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-10",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-09",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
      Object {
        "day": "2019-12-08",
        "mrr_amount": 0,
        "teams_count": 0,
        "users_count": 0,
      },
    ],
    "recent_teams": Array [
      Object {
        "joined": "2020-01-06T00:00:00+00:00",
        "name": "name5",
      },
      Object {
        "joined": "2020-01-05T00:00:00+00:00",
        "name": "name4",
      },
      Object {
        "joined": "2020-01-04T00:00:00+00:00",
        "name": "name3",
      },
    ],
    "teams_new": 4,
    "teams_total": 5,
  },
}
`;
